create method for get pubkey by account address
